--- a/GoIT/html/homework/EXAM/css/style.css
+++ b/GoIT/html/homework/EXAM/css/style.css
@@ -110,7 +110,9 @@ header {
     background-color: rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     text-decoration: none;
+    position: relative;
 }
+
 .jcarousel-pagination {
     margin-left: 74%;
     margin-top: 75px;
@@ -149,12 +151,16 @@ header {
 	margin-left: 10.2%;
 }
 .checked {
-	display: block;
-	opacity: 0;
-	text-align: center;
-	line-height: 17px;
-	color: #f3f3f3;
-    font-size: 16px;
+    display: block;
+    opacity: 0;
+    text-align: center;
+    background: #fff;
+    height: 8px;
+    width: 8px;
+    border-radius: 50%;
+    position: absolute;
+    top: 4px;
+    left: 4px;
 }
 .active{
 	opacity: 1;
@@ -278,24 +284,26 @@ header {
 }
 .page--2{
     display: inline-block;
-    width: 14px;
-    height: 14px;
+    width: 16px;
+    height: 16px;
     margin-left: 5px;
     background-color: rgba(0, 0, 0, 0);
     border:1px solid grey;
     border-radius: 10px;
-    font-size: 16px;
-    vertical-align: middle;
-    text-align: center;
     text-decoration: none;
+    position: relative;
 }
 .checked--2 {
-	display: block;
-	opacity: 0;
-	text-align: center;
-	line-height: 15px;
-	color: black;
-    font-size: 16px;
+    display: block;
+    opacity: 0;
+    text-align: center;
+    background: black;
+    height: 8px;
+    width: 8px;
+    border-radius: 50%;
+    position: absolute;
+    top: 4px;
+    left: 4px;
 }
 .active {
 	opacity: 1;
@@ -536,7 +544,7 @@ footer {
     display: block;
     margin-top: 54px;
     font-size: 11.5px;
-    font-weight: 500px;
+    font-weight: 500;
     font-family: 'Open Sans';
     color:white;
 }
@@ -570,7 +578,7 @@ header {
 }
 /*CAROUSEL*/
 .jcarousel__li{
-    max-width: 700px;
+    max-width: 698px;
 }
 .wrap_jcarousel{
 	margin-top: -22px;
@@ -578,7 +586,7 @@ header {
 }
 .jcarousel-prev{
     margin-top: 201px;
-    margin-left: -7%;
+    margin-left: -4%;
 }
 .jcarousel-next {
     margin-top: -233px;
@@ -755,7 +763,6 @@ header {
 }
 .designed {
 	margin-top: 57px;
-	margin-right: 12.5%;
 }
 }
 
