--- a/GoIT/javascript/lessons_23-24/styles/scss/style.scss
+++ b/GoIT/javascript/lessons_23-24/styles/scss/style.scss
@@ -1,16 +1,5 @@
 /*$primary-color: #333;*/
-@mixin transition($e, $time-in, $time-out) {
-    -webkit-transition: $e $time-in $time-out;
-    -moz-transition: $e $time-in $time-out;
-    -o-transition: $e $time-in $time-out;
-    transition: $e $time-in $time-out;
-}
-@mixin placeholder-color ($color) {
-	::-webkit-input-placeholder {color: $color;}
-    ::-moz-placeholder          {color: $color;}/* Firefox 19+ */
-     :-moz-placeholder          {color: $color;}/* Firefox 18- */
-     :-ms-input-placeholder     {color: $color;}
-}
+
 /*CLEARFIX*/
 .clearfix{
   *zoom: 1;
@@ -28,10 +17,10 @@
 	clear: both;
 }
 body {
-	background-color: blue; 
+	background-color: #7aedc7; 
 }
 .wrapper {
-	width: 800px;
+	width: 700px;
 	margin: 0 auto;
 }
 .item__remove {
@@ -43,11 +32,11 @@ body {
 }
 .list__item {
 	height: 50px;
-	width: 80%;
-	margin: 0 auto;
+	width: 500px;
+	margin-left: 50px;
 	margin-top: 20px;
-	background-color: yellow;
-	border-radius: 10px;
+	background-color: white;
+	border-radius: 0 10px;
 	border: 2px solid black;
 }
 .list__item__text {
@@ -62,19 +51,20 @@ body {
 }
 .item__value{
 	display: block;
-	margin: 0 auto;
+	float: left;
+	margin-left: 50px;
 	margin-top: 10px;
 	width: 300px;
 	height: 30px;
-	background-color: orange; 
+	background-color: white; 
 	border: 2px solid black;
 }
 .item__add {
 	display: inline-block;
 	margin-top: 10px;
-	width: 100px;
+	width: 70px;
 	height: 50px;
-	background-color: purple;
+	background-color: #baa135;
 	border: 2px solid black;
 	border-radius: 5px;
 	cursor: pointer;
@@ -82,28 +72,25 @@ body {
 .item__edit {
 	display: inline-block;
 	margin-top: 10px;
-	width: 100px;
+	width: 70px;
 	height: 50px;
-	background-color: red;
+	background-color: #a10000;
 	border: 2px solid black;
 	border-radius: 5px;
 	cursor: pointer;
 }
 .buttons {
 	width: 205px;
-    margin: 0 auto;
+    margin-left: 410px;
 }
 .hint {
-	margin: 0 auto;
-	margin-top: 50px;
+	margin-left: 50px;
+	margin-top: 10px;
     font-size: 18px;
     width: 350px;
-    background: yellow;
-    border: 1px solid black;
     text-align: justify;
 }
 .hint--2 {
-	margin-top: 10px;
+	margin-left: 50px;
 	width: 500px;
-	text-align: center;
 }
