--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -28,12 +28,12 @@ header {
   height: 540px;  
   margin: 0 auto;
   background-position: center;   
-  background: url(../img/header_background.jpg);
+  background-image: url(../img/header_background.jpg);
 }
 .header__background {
   width: 100%;
   height: 540px;
-  background-color: rgba(0, 0, 0, 0.2);  
+  /*background-color: rgba(0, 0, 0, 0.2);  */
 }
 .log{
   width: 190px ;
