--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -23,7 +23,7 @@ header {
   height: 540px;
   margin: 0 auto;
   background-position: center;
-  background: url(../img/header_background.jpg); }
+  background: url(../img/header_background.jpg) no-repeat; }
 
 .header__background {
   width: 100%;
