--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -22,8 +22,8 @@ header {
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  background-position: center;
-  background: url(../img/header_background.jpg) no-repeat; }
+  /*background-position: center;   */
+  background: url(../img/header_background.jpg); }
 
 .header__background {
   width: 100%;
