--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -158,7 +158,7 @@ header {
 .step--3{
   background-image: url(../img/step_3.jpg);
 }
-.step__gradient{ 
+/*.step__gradient{ 
   width: 300px;
   height: 240px;
   background: rgba(48,48,48,0.13);
@@ -168,9 +168,9 @@ header {
   background: -o-linear-gradient(top, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
   background: -ms-linear-gradient(top, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
   background: linear-gradient(to bottom, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
-  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=13); /*ie8*/
+  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=13);*/ /*ie8
   border-radius: 5px;
-}
+}*/
 .step__link {
   display: block;
   width: 70px;
