--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -380,20 +380,21 @@ header {
   background-image: url("../img/step_3.jpg");
 }
 
-.step__gradient {
+/*.step__gradient{ 
   width: 300px;
   height: 240px;
-  background: rgba(48, 48, 48, 0.13);
-  background: -moz-linear-gradient(top, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(48, 48, 48, 0.13)), color-stop(0%, rgba(48, 48, 48, 0.13)), color-stop(100%, rgba(13, 12, 13, 0.7)));
-  background: -webkit-linear-gradient(top, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
-  background: -o-linear-gradient(top, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
-  background: -ms-linear-gradient(top, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
-  background: linear-gradient(to bottom, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
-  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=13);
-  /*ie8*/
+  background: rgba(48,48,48,0.13);
+  background: -moz-linear-gradient(top, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(48,48,48,0.13)), color-stop(0%, rgba(48,48,48,0.13)), color-stop(100%, rgba(13,12,13,0.7)));
+  background: -webkit-linear-gradient(top, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
+  background: -o-linear-gradient(top, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
+  background: -ms-linear-gradient(top, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
+  background: linear-gradient(to bottom, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
+  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=13);*/
+
+/*ie8
   border-radius: 5px;
-}
+}*/
 
 .step__link {
   display: block;
