--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -379,7 +379,7 @@ footer {
   margin-bottom: 20px; }
 
 /*TABLET*/
-@media screen and (min-width: 768px) {
+@media screen\0, screen and (min-width: 768px) {
   header {
     height: 700px; }
   .header__background {
@@ -553,7 +553,7 @@ footer {
     float: right; } }
 
 /*DESKTOP*/
-@media screen and (min-width: 960px) {
+@media screen\0, screen and (min-width: 960px) {
   header {
     height: 665px; }
   .header__background {
