--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -651,7 +651,7 @@ footer {
 
 /*TABLET*/
 
-@media screen and (min-width: 768px) {
+@media screen\0, screen and (min-width: 768px) {
   header {
     height: 700px;
   }
@@ -924,7 +924,7 @@ footer {
 
 /*DESKTOP*/
 
-@media screen and (min-width: 960px) {
+@media screen\0, screen and (min-width: 960px) {
   header {
     height: 665px;
   }
