--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -28,7 +28,8 @@ header {
 .header__background {
   width: 100%;
   height: 540px;
-  /*background-color: rgba(0, 0, 0, 0.2);  */ }
+  background-color: black;
+  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=20); }
 
 .log {
   width: 190px;
