--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -33,9 +33,11 @@ header {
 .header__background {
   width: 100%;
   height: 540px;
-  background-color: black;
-  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=20);  
+/*  background-color: black;
+  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=20); */ 
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#000', endColorstr='#000');
 }
+
 .log{
   width: 190px ;
   margin: 0 auto;
