--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -22,15 +22,13 @@ header {
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  /*background-position: center;   */
+  background-position: center;
   background: url(../img/header_background.jpg); }
 
 .header__background {
   width: 100%;
   height: 540px;
-  /*  background-color: black;
-  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=20); */
-  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#000', endColorstr='#000'); }
+  background-color: rgba(0, 0, 0, 0.2); }
 
 .log {
   width: 190px;
@@ -381,7 +379,7 @@ footer {
   margin-bottom: 20px; }
 
 /*TABLET*/
-@media screen\0, screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   header {
     height: 700px; }
   .header__background {
@@ -555,7 +553,7 @@ footer {
     float: right; } }
 
 /*DESKTOP*/
-@media screen\0, screen and (min-width: 960px) {
+@media screen and (min-width: 960px) {
   header {
     height: 665px; }
   .header__background {
