--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -27,13 +27,13 @@ header {
   width: 100%;
   height: 540px;  
   margin: 0 auto;
-  background-position: center;   
+  /*background-position: center;   */
   background-image: url(../img/header_background.jpg);
 }
 .header__background {
   width: 100%;
   height: 540px;
-  background-color: rgba(0, 0, 0, 0.2);  
+  /*background-color: rgba(0, 0, 0, 0.2);  */
 }
 .log{
   width: 190px ;
