--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -27,8 +27,8 @@ header {
   width: 100%;
   height: 540px;  
   margin: 0 auto;
-  /*background-position: center;   */
   background-image: url(../img/header_background.jpg);
+  background-position: center;   
 }
 .header__background {
   width: 100%;
