--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -28,9 +28,9 @@ header {
 .header__background {
   width: 100%;
   height: 540px;
-  background-color: rgba(0, 0, 0, 0.2);
   background: transparent;
-  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#000000', endColorstr='#000000'); }
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#000000', endColorstr='#000000');
+  background-color: rgba(0, 0, 0, 0.2); }
 
 .log {
   width: 190px;
