--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -34,7 +34,7 @@ header {
   width: 100%;
   height: 540px;
   background:transparent;
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000,endColorstr=#33000000);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000,endColorstr=#33000000); /*ie8+*/
   background-color: rgba(0, 0, 0, 0.2);
 }
 .log{
@@ -160,7 +160,7 @@ header {
 .step--3{
   background-image: url(../img/step_3.jpg);
 }
-/*.step__gradient{ 
+.step__gradient{ 
   width: 300px;
   height: 240px;
   background: rgba(48,48,48,0.13);
@@ -170,9 +170,9 @@ header {
   background: -o-linear-gradient(top, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
   background: -ms-linear-gradient(top, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
   background: linear-gradient(to bottom, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
-  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=13);*/ /*ie8
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#303030', endColorstr='#0D0C0D')"; /* IE8 */
   border-radius: 5px;
-}*/
+}
 .step__link {
   display: block;
   width: 70px;
