--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -59,6 +59,7 @@ header {
   width: 85px;
   border: 2px solid white;
   border-radius: 20px; 
+  behavior: url(border-radius.htc);  /*учим IE border-radius */
 }
 .header__caption {
   width: 180px;
