--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -58,8 +58,13 @@ header {
   margin-left: 0.5%;
   width: 85px;
   border: 2px solid white;
-  border-radius: 20px; 
-  behavior: url(border-radius.htc);  /*учим IE border-radius */
+    /* Для хороших браузеров */
+  -moz-border-radius: 20px; /* Firefox */
+  -webkit-border-radius: 20px; /* Safari, Chrome */
+  -khtml-border-radius: 20px; /* KHTML */
+  border-radius: 20px; /* CSS3 */
+  /* Для плохих IE */
+  behavior: url(border-radius.htc); /* учим IE border-radius */
 }
 .header__caption {
   width: 180px;
