--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -326,7 +326,18 @@ header {
   color: white;
   font-family: "Montserrat-Bold";
   font-size: 13px;
+  /* Для хороших браузеров */
+  -moz-border-radius: 20px;
+  /* Firefox */
+  -webkit-border-radius: 20px;
+  /* Safari, Chrome */
+  -khtml-border-radius: 20px;
+  /* KHTML */
   border-radius: 20px;
+  /* CSS3 */
+  /* Для плохих IE */
+  behavior: url("border-radius.htc");
+  /* учим IE border-radius */
   letter-spacing: 0.5px;
   border: none;
 }
