--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -121,7 +121,7 @@ header {
   /* учим IE border-radius */
   letter-spacing: 0.5px;
   border: none;
-  background-color: #ff4e50; }
+  z-index: 5; }
 
 .title {
   width: 90%;
