--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -65,7 +65,8 @@ header {
   -khtml-border-radius: 20px; /* KHTML */
   border-radius: 20px; /* CSS3 */
   /* Для плохих IE */
-  behavior: url(PIE.htc); /* учим IE border-radius */
+  behavior: url(PIE/PIE.htc); /* учим IE border-radius */
+  z-index: 8;
 }
 .header__caption {
   width: 180px;
@@ -113,9 +114,8 @@ header {
   -khtml-border-radius: 20px; /* KHTML */
   border-radius: 20px; /* CSS3 */
   /* Для плохих IE */
-  behavior: url(PIE.htc); /* учим IE border-radius */
+  behavior: url(PIE/PIE.htc); /* учим IE border-radius */
   letter-spacing: 0.5px;
-  border: none; 
 }
 .title{
   width: 90%;
