--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -279,8 +279,9 @@ header {
   border-radius: 20px;
   /* CSS3 */
   /* Для плохих IE */
-  behavior: url("PIE.htc");
+  behavior: url("PIE/PIE.htc");
   /* учим IE border-radius */
+  z-index: 8;
 }
 
 .header__caption {
@@ -336,10 +337,9 @@ header {
   border-radius: 20px;
   /* CSS3 */
   /* Для плохих IE */
-  behavior: url("PIE.htc");
+  behavior: url("PIE/PIE.htc");
   /* учим IE border-radius */
   letter-spacing: 0.5px;
-  border: none;
 }
 
 .title {
