--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -240,10 +240,9 @@ header {
 .header__background {
   width: 100%;
   height: 540px;
-  background: transparent;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000,endColorstr=#33000000);
-  /*ie8+*/
-  background-color: rgba(0, 0, 0, 0.2);
+  /*filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000,endColorstr=#33000000);*/
+  /*ie8+
+  background-color: rgba(0, 0, 0, 0.2);*/
 }
 
 .log {
