--- a/GoIT/test/ie8/css/style.css
+++ b/GoIT/test/ie8/css/style.css
@@ -1,9 +1,15 @@
 .rounded {
     height: 200px;
+    width: 100px;
     border: 1px solid #000;
     border-radius: 20px;
     -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
     -khtml-border-radius: 20px;
     behavior: url(PIE/PIE.htc);
+}
+.cont{
+    background-image: url(../img/step_3.jpg);
+    height: 400px;
+    width: 100%;
 }
