--- a/GoIT/test/ie8/css/style.css
+++ b/GoIT/test/ie8/css/style.css
@@ -1,12 +1,13 @@
 .rounded {
     height: 200px;
-    width: 100px;
+    width: 200px;
     border: 1px solid #000;
     border-radius: 20px;
     -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
     -khtml-border-radius: 20px;
     behavior: url(PIE/PIE.htc);
+    z-index: 3;
 }
 .cont{
     position: relative;
