--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -233,16 +233,18 @@ header {
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  /*background-image: url(../img/header_background.jpg);*/
+  background-image: url("../img/header_background.jpg");
   background-position: center;
+  z-index: -2;
 }
 
 .header__background {
   width: 100%;
   height: 540px;
-  /*filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000,endColorstr=#33000000);*/
-  /*ie8+
-  background-color: rgba(0, 0, 0, 0.2);*/
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000,endColorstr=#33000000);
+  /*ie8+*/
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: -1;
 }
 
 .log {
