--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -29,14 +29,14 @@ header {
   margin: 0 auto;
   background-image: url(../img/header_background.jpg);
   background-position: center;   
-  z-index: -2;
+  z-index: -4;
 }
 .header__background {
   width: 100%;
   height: 540px;
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000,endColorstr=#33000000); /*ie8+*/
   background-color: rgba(0, 0, 0, 0.2);
-  z-index: -1;
+  z-index: -3;
 }
 .log{
   position: relative;
@@ -67,7 +67,6 @@ header {
   border-radius: 20px; /* CSS3 */
   /* Для плохих IE */
   behavior: url(PIE/PIE.htc); /* учим IE border-radius */
-  z-index: 8;
 }
 .header__caption {
   width: 180px;
@@ -117,6 +116,7 @@ header {
   /* Для плохих IE */
   behavior: url(PIE/PIE.htc); /* учим IE border-radius */
   letter-spacing: 0.5px;
+  background-color: #ff4e50;
 }
 .title{
   width: 90%;
