--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -25,7 +25,7 @@ header {
   margin: 0 auto;
   background-image: url(../img/header_background.jpg);
   background-position: center;
-  z-index: -2; }
+  z-index: -4; }
 
 .header__background {
   width: 100%;
@@ -33,7 +33,7 @@ header {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000,endColorstr=#33000000);
   /*ie8+*/
   background-color: rgba(0, 0, 0, 0.2);
-  z-index: -1; }
+  z-index: -3; }
 
 .log {
   position: relative;
@@ -67,8 +67,7 @@ header {
   /* CSS3 */
   /* Для плохих IE */
   behavior: url(PIE/PIE.htc);
-  /* учим IE border-radius */
-  z-index: 8; }
+  /* учим IE border-radius */ }
 
 .header__caption {
   width: 180px;
@@ -122,7 +121,8 @@ header {
   /* Для плохих IE */
   behavior: url(PIE/PIE.htc);
   /* учим IE border-radius */
-  letter-spacing: 0.5px; }
+  letter-spacing: 0.5px;
+  background-color: #ff4e50; }
 
 .title {
   width: 90%;
