--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -23,7 +23,7 @@ header {
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  background-image: url(../img/header_background.jpg);
+  /*background-image: url(../img/header_background.jpg);*/
   background-position: center;
   z-index: -4; }
 
