--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -27,9 +27,9 @@ header {
   width: 100%;
   height: 540px;  
   margin: 0 auto;
-  /*background-image: url(../img/header_background.jpg);*/
+  background-image: url(../img/header_background.jpg);
   background-position: center;   
-  z-index: -4;
+  z-index: -6;
 }
 .header__background {
   width: 100%;
