--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -20,6 +20,7 @@
   margin: 0 auto; }
 
 header {
+  position: relative;
   width: 100%;
   height: 540px;
   margin: 0 auto;
@@ -28,6 +29,7 @@ header {
   z-index: -6; }
 
 .header__background {
+  position: relative;
   width: 100%;
   height: 540px;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000,endColorstr=#33000000);
