--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -230,6 +230,7 @@ table {
 }
 
 header {
+  position: relative;
   width: 100%;
   height: 540px;
   margin: 0 auto;
@@ -239,6 +240,7 @@ header {
 }
 
 .header__background {
+  position: relative;
   width: 100%;
   height: 540px;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000,endColorstr=#33000000);
