--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -26,7 +26,7 @@ header {
   margin: 0 auto;
   background-image: url(../img/header_background.jpg);
   background-position: center;
-  z-index: -6; }
+  z-index: -1; }
 
 .header__background {
   position: relative;
@@ -35,7 +35,7 @@ header {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000,endColorstr=#33000000);
   /*ie8+*/
   background-color: rgba(0, 0, 0, 0.2);
-  z-index: -3; }
+  z-index: -1; }
 
 .log {
   position: relative;
@@ -171,7 +171,8 @@ header {
   height: 240px;
   background-image: url(../img/step_1.jpg);
   background-position: center;
-  border-radius: 5px; }
+  border-radius: 5px;
+  behavior: url(PIE/PIE.htc); }
 
 .step--2 {
   background-image: url(../img/step_2.jpg); }
@@ -192,7 +193,8 @@ header {
   /*-ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#303030', endColorstr='#0D0C0D')";*/
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D);
   /* IE8 */
-  border-radius: 5px; }
+  border-radius: 5px;
+  behavior: url(PIE/PIE.htc); }
 
 .step__link {
   display: block;
@@ -208,7 +210,8 @@ header {
   line-height: 22px;
   font-size: 10px;
   letter-spacing: 1.7px;
-  border-radius: 20px; }
+  border-radius: 20px;
+  behavior: url(PIE/PIE.htc); }
 
 .step__title {
   margin-top: 16px;
@@ -235,7 +238,8 @@ header {
   height: 120px;
   width: 120px;
   background-image: url(../img/parthner_1.jpg);
-  border-radius: 50%; }
+  border-radius: 50%;
+  behavior: url(PIE/PIE.htc); }
 
 .parthner__icon {
   display: block;
@@ -295,6 +299,7 @@ header {
   margin-top: 30px;
   border: 2px solid #ff4e50;
   border-radius: 20px;
+  behavior: url(PIE/PIE.htc);
   font-family: "Montserrat-Bold";
   font-size: 14px;
   letter-spacing: -0.5px;
@@ -315,7 +320,8 @@ header {
   width: 300px;
   margin: 0 auto;
   margin-top: 10px;
-  border-radius: 5px; }
+  border-radius: 5px;
+  behavior: url(PIE/PIE.htc); }
   .masonry__item:first-child {
     position: relative;
     margin-top: 14px; }
@@ -323,7 +329,8 @@ header {
 .masonry__image {
   width: 100%;
   height: 100%;
-  border-radius: 5px; }
+  border-radius: 5px;
+  behavior: url(PIE/PIE.htc); }
 
 .title--image {
   position: absolute;
@@ -347,6 +354,7 @@ header {
   width: 264px;
   height: 36px;
   border-radius: 5px;
+  behavior: url(PIE/PIE.htc);
   border: 1px solid #dcdcdc;
   padding-left: 15px;
   font-family: "Roboto-Light";
@@ -460,7 +468,8 @@ footer {
     height: 400px;
     background-image: url(../img/step_1.jpg);
     background-position: center;
-    border-radius: 5px; }
+    border-radius: 5px;
+    behavior: url(PIE/PIE.htc); }
   .step--2 {
     background-image: url(../img/step_2.jpg); }
   .step--3 {
