--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -236,7 +236,7 @@ header {
   margin: 0 auto;
   background-image: url("../img/header_background.jpg");
   background-position: center;
-  z-index: -6;
+  z-index: -1;
 }
 
 .header__background {
@@ -246,7 +246,7 @@ header {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000,endColorstr=#33000000);
   /*ie8+*/
   background-color: rgba(0, 0, 0, 0.2);
-  z-index: -3;
+  z-index: -1;
 }
 
 .log {
@@ -400,6 +400,7 @@ header {
   background-image: url("../img/step_1.jpg");
   background-position: center;
   border-radius: 5px;
+  behavior: url("PIE/PIE.htc");
 }
 
 .step--2 {
@@ -424,6 +425,7 @@ header {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D);
   /* IE8 */
   border-radius: 5px;
+  behavior: url("PIE/PIE.htc");
 }
 
 .step__link {
@@ -441,6 +443,7 @@ header {
   font-size: 10px;
   letter-spacing: 1.7px;
   border-radius: 20px;
+  behavior: url("PIE/PIE.htc");
 }
 
 .step__title {
@@ -472,6 +475,7 @@ header {
   width: 120px;
   background-image: url("../img/parthner_1.jpg");
   border-radius: 50%;
+  behavior: url("PIE/PIE.htc");
 }
 
 .parthner__icon {
@@ -541,6 +545,7 @@ header {
   margin-top: 30px;
   border: 2px solid #ff4e50;
   border-radius: 20px;
+  behavior: url("PIE/PIE.htc");
   font-family: "Montserrat-Bold";
   font-size: 14px;
   letter-spacing: -0.5px;
@@ -566,6 +571,7 @@ header {
   margin: 0 auto;
   margin-top: 10px;
   border-radius: 5px;
+  behavior: url("PIE/PIE.htc");
 }
 
 .masonry__item:first-child {
@@ -577,6 +583,7 @@ header {
   width: 100%;
   height: 100%;
   border-radius: 5px;
+  behavior: url("PIE/PIE.htc");
 }
 
 .title--image {
@@ -603,6 +610,7 @@ header {
   width: 264px;
   height: 36px;
   border-radius: 5px;
+  behavior: url("PIE/PIE.htc");
   border: 1px solid #dcdcdc;
   padding-left: 15px;
   font-family: "Roboto-Light";
@@ -758,6 +766,7 @@ footer {
     background-image: url("../img/step_1.jpg");
     background-position: center;
     border-radius: 5px;
+    behavior: url("PIE/PIE.htc");
   }
 
   .step--2 {
