--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -30,7 +30,7 @@ header {
   margin: 0 auto;
   background-image: url(../img/header_background.jpg);
   background-position: center;   
-  z-index: -6;
+  z-index: -1;
 }
 .header__background {
   position: relative;
@@ -38,7 +38,7 @@ header {
   height: 540px;
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#33000000,endColorstr=#33000000); /*ie8+*/
   background-color: rgba(0, 0, 0, 0.2);
-  z-index: -3;
+  z-index: -1;
 }
 .log{
   position: relative;
@@ -167,6 +167,7 @@ header {
   background-image: url(../img/step_1.jpg);
   background-position: center;
   border-radius: 5px;
+  behavior: url(PIE/PIE.htc);
 
 }
 .step--2{  
@@ -188,6 +189,7 @@ header {
   /*-ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#303030', endColorstr='#0D0C0D')";*/
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D); /* IE8 */
   border-radius: 5px;
+  behavior: url(PIE/PIE.htc);
 }
 .step__link {
   display: block;
@@ -204,6 +206,7 @@ header {
   font-size: 10px;
   letter-spacing: 1.7px;
   border-radius: 20px;
+  behavior: url(PIE/PIE.htc);
 }
 .step__title{
   margin-top: 16px;
@@ -231,6 +234,7 @@ header {
   width: 120px;
   background-image: url(../img/parthner_1.jpg);
   border-radius: 50%;
+  behavior: url(PIE/PIE.htc);
 }
 .parthner__icon{
   display: block;
@@ -289,6 +293,7 @@ header {
   margin-top: 30px;
   border: 2px solid #ff4e50;
   border-radius: 20px;
+  behavior: url(PIE/PIE.htc);
   font-family: $montBold;
   font-size: 14px;
   letter-spacing: -0.5px;
@@ -310,6 +315,7 @@ header {
   margin: 0 auto;
   margin-top: 10px;
   border-radius: 5px;
+  behavior: url(PIE/PIE.htc);
   &:first-child {
     position: relative;
     margin-top: 14px;
@@ -319,6 +325,7 @@ header {
   width: 100%;
   height: 100%;
   border-radius: 5px;
+  behavior: url(PIE/PIE.htc);
 }
 .title--image{
   position: absolute;
@@ -342,6 +349,7 @@ header {
   width: 264px;
   height: 36px;
   border-radius: 5px;
+  behavior: url(PIE/PIE.htc);
   border: 1px solid #dcdcdc; 
   padding-left: 15px;
   font-family: $robLigt;
@@ -472,6 +480,7 @@ header {
   background-image: url(../img/step_1.jpg);
   background-position: center;
   border-radius: 5px;
+  behavior: url(PIE/PIE.htc);
 }
 .step--2{  
   background-image: url(../img/step_2.jpg);
