--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -28,7 +28,7 @@ header {
   width: 100%;
   height: 540px;  
   margin: 0 auto;
-  background-image: url(../img/header_background.jpg);
+  /*background-image: url(../img/header_background.jpg);*/
   background-position: center;   
   z-index: -1;
 }
@@ -167,7 +167,7 @@ header {
   background-image: url(../img/step_1.jpg);
   background-position: center;
   border-radius: 5px;
-
+  behavior: url(PIE/PIE.htc);
 }
 .step--2{  
   background-image: url(../img/step_2.jpg);
