--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -28,7 +28,7 @@ header {
   width: 100%;
   height: 540px;  
   margin: 0 auto;
-  /*background-image: url(../img/header_background.jpg);*/
+  background-image: url(../img/header_background.jpg);
   background-position: center;   
   z-index: -1;
 }
@@ -188,6 +188,7 @@ header {
   /*-ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#303030', endColorstr='#0D0C0D')";*/
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D); /* IE8 */
   border-radius: 5px;
+  behavior: url(PIE/PIE.htc);
 }
 .step__link {
   display: block;
