--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -234,7 +234,7 @@ header {
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  /*background-image: url(../img/header_background.jpg);*/
+  background-image: url("../img/header_background.jpg");
   background-position: center;
   z-index: -1;
 }
@@ -425,6 +425,7 @@ header {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D);
   /* IE8 */
   border-radius: 5px;
+  behavior: url("PIE/PIE.htc");
 }
 
 .step__link {
