--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -24,7 +24,7 @@ header {
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  background-image: url(../img/header_background.jpg);
+  /*background-image: url(../img/header_background.jpg);*/
   background-position: center;
   z-index: -1; }
 
@@ -167,11 +167,12 @@ header {
   display: none; }
 
 .step {
+  position: relative;
   width: 300px;
   height: 240px;
   background-image: url(../img/step_1.jpg);
   background-position: center;
-  border-radius: 5px;
+  border-radius: 10px;
   behavior: url(PIE/PIE.htc); }
 
 .step--2 {
@@ -193,7 +194,7 @@ header {
   /*-ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#303030', endColorstr='#0D0C0D')";*/
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D);
   /* IE8 */
-  border-radius: 5px;
+  border-radius: 10px;
   behavior: url(PIE/PIE.htc); }
 
 .step__link {
