--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -28,7 +28,7 @@ header {
   width: 100%;
   height: 540px;  
   margin: 0 auto;
-  background-image: url(../img/header_background.jpg);
+  /*background-image: url(../img/header_background.jpg);*/
   background-position: center;   
   z-index: -1;
 }
@@ -162,11 +162,12 @@ header {
   display: none;
 }
 .step{
+  position: relative;
   width: 300px;
   height: 240px;
   background-image: url(../img/step_1.jpg);
   background-position: center;
-  border-radius: 5px;
+  border-radius: 10px;
   behavior: url(PIE/PIE.htc);
 }
 .step--2{  
@@ -187,7 +188,7 @@ header {
   background: linear-gradient(to bottom, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
   /*-ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#303030', endColorstr='#0D0C0D')";*/
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D); /* IE8 */
-  border-radius: 5px;
+  border-radius: 10px;
   behavior: url(PIE/PIE.htc);
 }
 .step__link {
