--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -234,7 +234,7 @@ header {
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  background-image: url("../img/header_background.jpg");
+  /*background-image: url(../img/header_background.jpg);*/
   background-position: center;
   z-index: -1;
 }
@@ -395,11 +395,12 @@ header {
 }
 
 .step {
+  position: relative;
   width: 300px;
   height: 240px;
   background-image: url("../img/step_1.jpg");
   background-position: center;
-  border-radius: 5px;
+  border-radius: 10px;
   behavior: url("PIE/PIE.htc");
 }
 
@@ -424,7 +425,7 @@ header {
   /*-ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#303030', endColorstr='#0D0C0D')";*/
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D);
   /* IE8 */
-  border-radius: 5px;
+  border-radius: 10px;
   behavior: url("PIE/PIE.htc");
 }
 
