--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -234,7 +234,7 @@ header {
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  /*background-image: url(../img/header_background.jpg);*/
+  background-image: url("../img/header_background.jpg");
   background-position: center;
   z-index: -1;
 }
@@ -423,8 +423,7 @@ header {
   background: -ms-linear-gradient(top, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
   background: linear-gradient(to bottom, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
   /*-ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#303030', endColorstr='#0D0C0D')";*/
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D);
-  /* IE8 */
+  /*filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D);*/
   border-radius: 10px;
   behavior: url("PIE/PIE.htc");
 }
@@ -465,77 +464,66 @@ header {
   line-height: 17px;
 }
 
-/*PARTHNERS*/
-
-.parthner__photo {
+/*PARTHNERS
+.parthner__photo{
   display: block;
   margin: 0 auto;
   margin-top: 12px;
   height: 120px;
   width: 120px;
-  background-image: url("../img/parthner_1.jpg");
+  background-image: url(../img/parthner_1.jpg);
   border-radius: 50%;
-}
 
-.parthner__icon {
+}
+.parthner__icon{
   display: block;
   float: right;
   margin-right: -5px;
-  margin-top: 85px;
+  margin-top: 85px;  
   height: 41px;
   width: 41px;
-  background-image: url("../img/icon_1.png");
+  background-image: url(../img/icon_1.png); 
 }
-
-.parthner__name {
+.parthner__name{
   display: block;
   margin-top: 20px;
   text-align: center;
   text-decoration: none;
   color: black;
   font-size: 14px;
-  font-family: "Montserrat-Bold";
+  font-family: $montBold;
 }
-
-.parthner__feedback {
+.parthner__feedback{
   width: 220px;
   margin: 0 auto;
   margin-top: 16px;
   font-size: 14px;
   line-height: 16px;
-  font-family: "Roboto-Light";
+  font-family: $robLigt;
   text-align: center;
   color: #989898;
 }
-
-.parthner__photo--2 {
+.parthner__photo--2{
   margin-top: 27px;
-  background-image: url("../img/parthner_2.jpg");
+  background-image: url(../img/parthner_2.jpg);
 }
-
-.parthner__icon--2 {
-  background-image: url("../img/icon_2.png");
+.parthner__icon--2{
+  background-image: url(../img/icon_2.png); 
 }
-
-.parthner__photo--3 {
+.parthner__photo--3{
   margin-top: 27px;
-  background-image: url("../img/parthner_3.jpg");
+  background-image: url(../img/parthner_3.jpg);
 }
-
-.parthner__icon--3 {
-  background-image: url("../img/icon_3.png");
-}
-
-.parthner__photo--4 {
+.parthner__icon--3{
+  background-image: url(../img/icon_3.png); 
+}.parthner__photo--4{
   margin-top: 27px;
-  background-image: url("../img/parthner_4.jpg");
+  background-image: url(../img/parthner_4.jpg);
 }
-
-.parthner__icon--4 {
-  background-image: url("../img/icon_4.png");
+.parthner__icon--4{
+  background-image: url(../img/icon_4.png); 
 }
-
-.parthners__link {
+.parthners__link{
   clear: both;
   display: block;
   width: 276px;
@@ -544,7 +532,8 @@ header {
   margin-top: 30px;
   border: 2px solid #ff4e50;
   border-radius: 20px;
-  font-family: "Montserrat-Bold";
+
+  font-family: $montBold;
   font-size: 14px;
   letter-spacing: -0.5px;
   text-decoration: none;
@@ -552,7 +541,6 @@ header {
   text-align: center;
   color: #ff4e50;
 }
-
 /*DISCOVER HOLIDAY*/
 
 /*MASONRY*/
