--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -28,7 +28,7 @@ header {
   width: 100%;
   height: 540px;  
   margin: 0 auto;
-  background-image: url(../img/header_background.jpg);
+  /*background-image: url(../img/header_background.jpg);*/
   background-position: center;   
   z-index: -1;
 }
@@ -186,8 +186,9 @@ header {
   background: -o-linear-gradient(top, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
   background: -ms-linear-gradient(top, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
   background: linear-gradient(to bottom, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
-  /*-ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#303030', endColorstr='#0D0C0D')";*/
   /*filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D);*/
+  -pie-background: linear-gradient(to bottom, #303030, #0D0C0D); /*ie 6-9 via PIE*/
+  behavior: url(PIE.htc);
   border-radius: 10px;
   behavior: url(PIE/PIE.htc);
 }
