--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -228,7 +228,7 @@ header {
   font-size: 14px;
   line-height: 17px; }
 
-PARTHNERS
+/*PARTHNERS*/
 .parthner__photo {
   display: block;
   margin: 0 auto;
