--- a/GoIT/test/EXAM/src/styles/partials/style.scss
+++ b/GoIT/test/EXAM/src/styles/partials/style.scss
@@ -140,13 +140,9 @@ header {
     position: relative;
 }
 .jcarousel__li{
-    overflow: hidden;
     float: left;
     height: 240px;
     max-width: 300px;
-    border-radius: 10px;
-    behavior: url(PIE/PIE.htc);
-
 }
 .jcarousel__wrap{
     margin: 0 auto;
@@ -170,7 +166,8 @@ header {
   height: 240px;
   background-image: url(../img/step_1.jpg);
   background-position: center;
-
+  border-radius: 5px;
+  behavior: url(PIE/PIE.htc);
 }
 .step--2{  
   background-image: url(../img/step_2.jpg);
@@ -179,8 +176,8 @@ header {
   background-image: url(../img/step_3.jpg);
 }
 .step__gradient{ 
-  width: 300px;
-  height: 240px;
+  width: 298px;
+  height: 238px;
   background: rgba(48,48,48,0.13);
   background: -moz-linear-gradient(top, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
   background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(48,48,48,0.13)), color-stop(0%, rgba(48,48,48,0.13)), color-stop(100%, rgba(13,12,13,0.7)));
@@ -189,7 +186,9 @@ header {
   background: -ms-linear-gradient(top, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
   background: linear-gradient(to bottom, rgba(48,48,48,0.13) 0%, rgba(48,48,48,0.13) 0%, rgba(13,12,13,0.7) 100%);
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D);
-  border-radius: 10px;
+  border-radius: 1px solid white;
+  border-radius: 5px;
+  behavior: url(PIE/PIE.htc);
 }
 .step__link {
   display: block;
