--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -369,12 +369,9 @@ header {
 }
 
 .jcarousel__li {
-  overflow: hidden;
   float: left;
   height: 240px;
   max-width: 300px;
-  border-radius: 10px;
-  behavior: url("PIE/PIE.htc");
 }
 
 .jcarousel__wrap {
@@ -403,6 +400,8 @@ header {
   height: 240px;
   background-image: url("../img/step_1.jpg");
   background-position: center;
+  border-radius: 5px;
+  behavior: url("PIE/PIE.htc");
 }
 
 .step--2 {
@@ -414,8 +413,8 @@ header {
 }
 
 .step__gradient {
-  width: 300px;
-  height: 240px;
+  width: 298px;
+  height: 238px;
   background: rgba(48, 48, 48, 0.13);
   background: -moz-linear-gradient(top, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
   background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(48, 48, 48, 0.13)), color-stop(0%, rgba(48, 48, 48, 0.13)), color-stop(100%, rgba(13, 12, 13, 0.7)));
@@ -424,7 +423,9 @@ header {
   background: -ms-linear-gradient(top, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
   background: linear-gradient(to bottom, rgba(48, 48, 48, 0.13) 0%, rgba(48, 48, 48, 0.13) 0%, rgba(13, 12, 13, 0.7) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#21303030,endColorstr=#B20D0C0D);
-  border-radius: 10px;
+  border-radius: 1px solid white;
+  border-radius: 5px;
+  behavior: url("PIE/PIE.htc");
 }
 
 .step__link {
