--- a/GoIT/test/EXAM/src/styles/partials/style.css
+++ b/GoIT/test/EXAM/src/styles/partials/style.css
@@ -24,7 +24,7 @@ header {
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  /*background-image: url(../img/header_background.jpg);*/
+  background-image: url(../img/header_background.jpg);
   background-position: center;
   z-index: -1; }
 
@@ -181,6 +181,7 @@ header {
   background-image: url(../img/step_3.jpg); }
 
 .step__gradient {
+  position: relative;
   width: 300px;
   height: 240px;
   background: rgba(48, 48, 48, 0.13);
