--- a/GoIT/test/EXAM/src/styles/style.main.css
+++ b/GoIT/test/EXAM/src/styles/style.main.css
@@ -234,7 +234,7 @@ header {
   width: 100%;
   height: 540px;
   margin: 0 auto;
-  /*background-image: url(../img/header_background.jpg);*/
+  background-image: url("../img/header_background.jpg");
   background-position: center;
   z-index: -1;
 }
@@ -412,6 +412,7 @@ header {
 }
 
 .step__gradient {
+  position: relative;
   width: 300px;
   height: 240px;
   background: rgba(48, 48, 48, 0.13);
